--- a/_posts/2012-11-17-adhikari12.md
+++ b/_posts/2012-11-17-adhikari12.md
@@ -29,7 +29,7 @@ author:
   family: Hollmén
 date: 2012-11-17
 publisher: PMLR
-container-title: Asian Conference on Machine Learning
+container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
 genre: inproceedings
 issued:
