--- a/_posts/2012-11-17-feraud12.md
+++ b/_posts/2012-11-17-feraud12.md
@@ -25,7 +25,7 @@ author:
   family: Urvoy
 date: 2012-11-17
 publisher: PMLR
-container-title: Asian Conference on Machine Learning
+container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
 genre: inproceedings
 issued:
