--- a/_posts/2012-11-17-hoi12.md
+++ b/_posts/2012-11-17-hoi12.md
@@ -19,7 +19,7 @@ author:
   family: Buntine
 date: 2012-11-17
 publisher: PMLR
-container-title: Asian Conference on Machine Learning
+container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
 genre: inproceedings
 issued:
