--- a/_posts/2012-11-17-klami12.md
+++ b/_posts/2012-11-17-klami12.md
@@ -24,7 +24,7 @@ author:
   family: Klami
 date: 2012-11-17
 publisher: PMLR
-container-title: Asian Conference on Machine Learning
+container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
 genre: inproceedings
 issued:
