--- a/_posts/2012-11-17-yang12.md
+++ b/_posts/2012-11-17-yang12.md
@@ -28,7 +28,7 @@ author:
   family: Wu
 date: 2012-11-17
 publisher: PMLR
-container-title: Asian Conference on Machine Learning
+container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
 genre: inproceedings
 issued:
