--- a/_posts/2012-11-17-zhou12.md
+++ b/_posts/2012-11-17-zhou12.md
@@ -32,7 +32,7 @@ author:
   family: Tsang
 date: 2012-11-17
 publisher: PMLR
-container-title: Asian Conference on Machine Learning
+container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
 genre: inproceedings
 issued:
