Update auto generated citeproc.yaml

--- a/_posts/2012-11-17-tran12a.md
+++ b/_posts/2012-11-17-tran12a.md
@@ -26,6 +26,7 @@ author:
 - given: S.
   family: Venkatesh
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
