--- a/_posts/2012-11-17-azmandian12.md
+++ b/_posts/2012-11-17-azmandian12.md
@@ -29,6 +29,7 @@ author:
 - given: D.R.
   family: Kaeli
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
