--- a/_posts/2012-11-17-chatzis12.md
+++ b/_posts/2012-11-17-chatzis12.md
@@ -28,6 +28,7 @@ author:
 - given: S.P.
   family: Chatzis
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
