--- a/_posts/2012-11-17-chiang12.md
+++ b/_posts/2012-11-17-chiang12.md
@@ -29,6 +29,7 @@ author:
 - given: S.-D.
   family: Lin
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
