--- a/_posts/2012-11-17-fan12.md
+++ b/_posts/2012-11-17-fan12.md
@@ -30,6 +30,7 @@ author:
 - given: N.
   family: Bouguila
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
