--- a/_posts/2012-11-17-gu12.md
+++ b/_posts/2012-11-17-gu12.md
@@ -24,6 +24,7 @@ author:
 - given: Y.
   family: Guo
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
