--- a/_posts/2012-11-17-kawajiri12.md
+++ b/_posts/2012-11-17-kawajiri12.md
@@ -38,6 +38,7 @@ author:
 - given: T.
   family: Sato
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
