--- a/_posts/2012-11-17-liu12b.md
+++ b/_posts/2012-11-17-liu12b.md
@@ -27,6 +27,7 @@ author:
 - given: Z.-H.
   family: Zhou
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
