--- a/_posts/2012-11-17-mao12.md
+++ b/_posts/2012-11-17-mao12.md
@@ -25,6 +25,7 @@ author:
 - given: M.
   family: Jaeger
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
