--- a/_posts/2012-11-17-sasaki12.md
+++ b/_posts/2012-11-17-sasaki12.md
@@ -32,6 +32,7 @@ author:
 - given: A.
   family: Hyvärinen
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
