--- a/_posts/2012-11-17-shariat12.md
+++ b/_posts/2012-11-17-shariat12.md
@@ -26,6 +26,7 @@ author:
 - given: V.
   family: Pavlovic
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
