--- a/_posts/2012-11-17-vovk12.md
+++ b/_posts/2012-11-17-vovk12.md
@@ -20,6 +20,7 @@ author:
 - given: V.
   family: Vovk
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
