--- a/_posts/2012-11-17-wang12a.md
+++ b/_posts/2012-11-17-wang12a.md
@@ -30,6 +30,7 @@ author:
 - given: Y.
   family: Wu
 date: 2012-11-17
+address: Singapore Management University, Singapore
 publisher: PMLR
 container-title: Proceedings of the Asian Conference on Machine Learning
 volume: '25'
