Update auto generated citeproc.yaml

--- a/_posts/2012-11-17-adhikari12.md
+++ b/_posts/2012-11-17-adhikari12.md
@@ -13,20 +13,20 @@ abstract: Observing natural phenomena at several levels of detail results in mul
   of mixture models across different resolutions. We experiment our proposed algorithm
   on the two real-world chromosomal aberration datasets represented in two different
   resolutions. Results show an improvement on the compared multiresolution settings.
-pdf: http://proceedings.pmlr.press/adhikari12/adhikari12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/adhikari12/adhikari12.pdf
 layout: inproceedings
 id: adhikari12
 month: 0
 firstpage: 17
 lastpage: 32
 page: 17-32
-origpdf: http://jmlr.org/proceedings/papers/v25/adhikari12/adhikari12.pdf
 sections: 
 author:
 - given: P.R.
   family: Adhikari
 - given: J.
   family: Hollmén
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
