--- a/_posts/2012-11-17-chatzis12.md
+++ b/_posts/2012-11-17-chatzis12.md
@@ -15,18 +15,18 @@ abstract: The dramatic rates new digital content becomes available has brought c
   that allow the number of latent classes (genres/interests) to be automatically inferred.
   We experiment on a large set of real ratings data, and show that our approach outperforms
   four common baselines, including two very competitive state-of-the-art approaches.
-pdf: http://proceedings.pmlr.press/chatzis12/chatzis12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/chatzis12/chatzis12.pdf
 layout: inproceedings
 id: chatzis12
 month: 0
 firstpage: 65
 lastpage: 79
 page: 65-79
-origpdf: http://jmlr.org/proceedings/papers/v25/chatzis12/chatzis12.pdf
 sections: 
 author:
 - given: S.P.
   family: Chatzis
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
