--- a/_posts/2012-11-17-feraud12.md
+++ b/_posts/2012-11-17-feraud12.md
@@ -9,20 +9,20 @@ abstract: Stochastic multi-armed bandit algorithms are used to solve the explora
   We show that the bound of expectation to play a suboptimal arm is lower than the
   one of UCB1 policy. We illustrate this result on both synthetic problems and realistic
   problems (ad-serving and emailing campaigns optimization).
-pdf: http://proceedings.pmlr.press/feraud12/feraud12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/feraud12/feraud12.pdf
 layout: inproceedings
 id: feraud12
 month: 0
 firstpage: 129
 lastpage: 143
 page: 129-143
-origpdf: http://jmlr.org/proceedings/papers/v25/feraud12/feraud12.pdf
 sections: 
 author:
 - given: R.
   family: Féraud
 - given: T.
   family: Urvoy
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
