--- a/_posts/2012-11-17-kawajiri12.md
+++ b/_posts/2012-11-17-kawajiri12.md
@@ -19,14 +19,13 @@ abstract: 'Recently wireless LAN (WLAN) localization systems are gaining popular
   datasets demonstrate learning from route-annotated data is comparable to state-of-the-art
   supervised and semi-supervised approaches trained with large amount of calibration
   data.'
-pdf: http://proceedings.pmlr.press/kawajiri12/kawajiri12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/kawajiri12/kawajiri12.pdf
 layout: inproceedings
 id: kawajiri12
 month: 0
 firstpage: 191
 lastpage: 204
 page: 191-204
-origpdf: http://jmlr.org/proceedings/papers/v25/kawajiri12/kawajiri12.pdf
 sections: 
 author:
 - given: R.
@@ -37,6 +36,7 @@ author:
   family: Fukui
 - given: T.
   family: Sato
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
