--- a/_posts/2012-11-17-nakajima12.md
+++ b/_posts/2012-11-17-nakajima12.md
@@ -10,14 +10,13 @@ abstract: Principal component analysis (PCA) can be regarded as approximating a 
   approximation to SAMF, which gives the global optimal solution for a large subset
   of parameters in each step. We demonstrate the usefulness of our method on artificial
   data and the foreground/background video separation.
-pdf: http://proceedings.pmlr.press/nakajima12/nakajima12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/nakajima12/nakajima12.pdf
 layout: inproceedings
 id: nakajima12
 month: 0
 firstpage: 301
 lastpage: 316
 page: 301-316
-origpdf: http://jmlr.org/proceedings/papers/v25/nakajima12/nakajima12.pdf
 sections: 
 author:
 - given: S.
@@ -26,6 +25,7 @@ author:
   family: Sugiyama
 - given: S.D.
   family: Babacan
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
