--- a/_posts/2012-11-17-shariat12.md
+++ b/_posts/2012-11-17-shariat12.md
@@ -11,20 +11,20 @@ abstract: Traditional pairwise sequence alignment is based on matching individua
   two sequences. Our results demonstrate that this new measure of sequence similarity
   can lead to improved classification performance, while being resilient to noise,
   on a variety of problems, from EEG to motion sequence classification.
-pdf: http://proceedings.pmlr.press/shariat12/shariat12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/shariat12/shariat12.pdf
 layout: inproceedings
 id: shariat12
 month: 0
 firstpage: 379
 lastpage: 394
 page: 379-394
-origpdf: http://jmlr.org/proceedings/papers/v25/shariat12/shariat12.pdf
 sections: 
 author:
 - given: S.
   family: Shariat
 - given: V.
   family: Pavlovic
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
