--- a/_posts/2012-11-17-than12.md
+++ b/_posts/2012-11-17-than12.md
@@ -11,14 +11,13 @@ abstract: We consider supervised dimension reduction (SDR) for problems with dis
   can yield scalable and qualitative methods for SDR. One of those adaptations can
   perform better than the state-of-the-art method for SDR while enjoying significantly
   faster speed.
-pdf: http://proceedings.pmlr.press/than12/than12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/than12/than12.pdf
 layout: inproceedings
 id: than12
 month: 0
 firstpage: 395
 lastpage: 410
 page: 395-410
-origpdf: http://jmlr.org/proceedings/papers/v25/than12/than12.pdf
 sections: 
 author:
 - given: K.
@@ -29,6 +28,7 @@ author:
   family: Nguyen
 - given: N.K.
   family: Pham
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
