--- a/_posts/2012-11-17-tran12a.md
+++ b/_posts/2012-11-17-tran12a.md
@@ -9,14 +9,13 @@ abstract: Ordinal data is omnipresent in almost all multiuser-generated feedback
   filtering techniques on large-scale public datasets. The model thus has the potential
   to extend application of RBMs to diverse domains such as recommendation systems,
   product reviews and expert assessments.
-pdf: http://proceedings.pmlr.press/tran12a/tran12a.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/tran12a/tran12a.pdf
 layout: inproceedings
 id: tran12a
 month: 0
 firstpage: 411
 lastpage: 426
 page: 411-426
-origpdf: http://jmlr.org/proceedings/papers/v25/tran12a/tran12a.pdf
 sections: 
 author:
 - given: T.
@@ -25,6 +24,7 @@ author:
   family: Phung
 - given: S.
   family: Venkatesh
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
