--- a/_posts/2012-11-17-tran12b.md
+++ b/_posts/2012-11-17-tran12b.md
@@ -12,14 +12,13 @@ abstract: 'Ranking over sets arise when users choose between groups of items. Fo
   can be efficiently evaluated. Finally, we evaluate the proposed model on large-scale
   collaborative filtering tasks and demonstrate that it is competitive against state-of-the-art
   methods.'
-pdf: http://proceedings.pmlr.press/tran12b/tran12b.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/tran12b/tran12b.pdf
 layout: inproceedings
 id: tran12b
 month: 0
 firstpage: 427
 lastpage: 442
 page: 427-442
-origpdf: http://jmlr.org/proceedings/papers/v25/tran12b/tran12b.pdf
 sections: 
 author:
 - given: T.
@@ -28,6 +27,7 @@ author:
   family: Phung
 - given: S.
   family: Venkatesh
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
