--- a/_posts/2012-11-17-vovk12.md
+++ b/_posts/2012-11-17-vovk12.md
@@ -7,18 +7,18 @@ abstract: Conformal predictors are set predictors that are automatically valid i
   conformal predictors have been only known to control unconditional coverage probability.
   This paper explores various versions of conditional validity and various ways to
   achieve them using inductive conformal predictors and their modifications.
-pdf: http://proceedings.pmlr.press/vovk12/vovk12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/vovk12/vovk12.pdf
 layout: inproceedings
 id: vovk12
 month: 0
 firstpage: 475
 lastpage: 490
 page: 475-490
-origpdf: http://jmlr.org/proceedings/papers/v25/vovk12/vovk12.pdf
 sections: 
 author:
 - given: V.
   family: Vovk
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
