--- a/_posts/2012-11-17-asbeh12.md
+++ b/_posts/2012-11-17-asbeh12.md
@@ -14,20 +14,20 @@ abstract: Identification of latent variables that govern a problem and the relat
   about the distribution. Using simulated and real-world datasets, we show that LPCC
   improves accuracy with the sample size, can learn large LVMs, and is accurate in
   learning compared to state-of-the-art algorithms.
-pdf: http://proceedings.pmlr.press/asbeh12/asbeh12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/asbeh12/asbeh12.pdf
 layout: inproceedings
 id: asbeh12
 month: 0
 firstpage: 33
 lastpage: 48
 page: 33-48
-origpdf: http://jmlr.org/proceedings/papers/v25/asbeh12/asbeh12.pdf
 sections: 
 author:
 - given: N.
   family: Asbeh
 - given: B.
   family: Lerner
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
