--- a/_posts/2012-11-17-azmandian12.md
+++ b/_posts/2012-11-17-azmandian12.md
@@ -10,14 +10,13 @@ abstract: Selecting features is an important step of any machine learning task, 
   this feature selection algorithm compared to popular and state-of-the-art methods.
   We also show that the proposed algorithm is able to overcome the small sample space
   problem and perform well on highly imbalanced datasets.
-pdf: http://proceedings.pmlr.press/azmandian12/azmandian12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/azmandian12/azmandian12.pdf
 layout: inproceedings
 id: azmandian12
 month: 0
 firstpage: 49
 lastpage: 64
 page: 49-64
-origpdf: http://jmlr.org/proceedings/papers/v25/azmandian12/azmandian12.pdf
 sections: 
 author:
 - given: F.
@@ -28,6 +27,7 @@ author:
   family: Aslam
 - given: D.R.
   family: Kaeli
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
