--- a/_posts/2012-11-17-chiang12.md
+++ b/_posts/2012-11-17-chiang12.md
@@ -12,14 +12,13 @@ abstract: Multi-label classification has attracted a great deal of attention in 
   Our experiment results demonstrate that the proposed method outperforms state-of-the-art
   instance-based learning approaches. We believe that appropriately exploiting k-nearest
   neighbors is useful to solve the multi-label problem.
-pdf: http://proceedings.pmlr.press/chiang12/chiang12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/chiang12/chiang12.pdf
 layout: inproceedings
 id: chiang12
 month: 0
 firstpage: 81
 lastpage: 96
 page: 81-96
-origpdf: http://jmlr.org/proceedings/papers/v25/chiang12/chiang12.pdf
 sections: 
 author:
 - given: T.-H.
@@ -28,6 +27,7 @@ author:
   family: Lo
 - given: S.-D.
   family: Lin
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
