--- a/_posts/2012-11-17-demyanov12.md
+++ b/_posts/2012-11-17-demyanov12.md
@@ -9,14 +9,13 @@ abstract: We study the problem of selecting the best parameter values to use for
   classifier, by analysing the disposition of points in the kernel feature space.
   We experimentally compare our two approaches with several existing methods and show
   they are able to achieve good accuracy, whilst also having low running time.
-pdf: http://proceedings.pmlr.press/demyanov12/demyanov12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/demyanov12/demyanov12.pdf
 layout: inproceedings
 id: demyanov12
 month: 0
 firstpage: 97
 lastpage: 112
 page: 97-112
-origpdf: http://jmlr.org/proceedings/papers/v25/demyanov12/demyanov12.pdf
 sections: 
 author:
 - given: S.
@@ -27,6 +26,7 @@ author:
   family: Ramamohanarao
 - given: C.
   family: Leckie
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
