--- a/_posts/2012-11-17-haimovitch12.md
+++ b/_posts/2012-11-17-haimovitch12.md
@@ -6,14 +6,13 @@ abstract: We describe a bootstrapping algorithm to learn from partially labeled 
   cover semi-supervised learning, domain adaptation and weakly supervised learning.
   In some cases our methods were able to reduce test error by more than half using
   such large amount of data.
-pdf: http://proceedings.pmlr.press/haimovitch12/haimovitch12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/haimovitch12/haimovitch12.pdf
 layout: inproceedings
 id: haimovitch12
 month: 0
 firstpage: 175
 lastpage: 190
 page: 175-190
-origpdf: http://jmlr.org/proceedings/papers/v25/haimovitch12/haimovitch12.pdf
 sections: 
 author:
 - given: Y.
@@ -22,6 +21,7 @@ author:
   family: Crammer
 - given: S.
   family: Mannor
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
