--- a/_posts/2012-11-17-hoi12.md
+++ b/_posts/2012-11-17-hoi12.md
@@ -2,7 +2,7 @@
 title: Preface
 abstract: Preface to the Proceedings of the 4th Asian Conference on Machine Learning,
   4-6th November 2012, Singapore.
-pdf: http://proceedings.pmlr.press/hoi12/hoi12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/preface/preface.pdf
 section: preface
 layout: inproceedings
 id: hoi12
@@ -10,13 +10,13 @@ month: 0
 firstpage: 0
 lastpage: 0
 page: 0-0
-origpdf: http://jmlr.org/proceedings/papers/v25/preface/preface.pdf
 sections: 
 author:
 - given: Steven C.H.
   family: Hoi
 - given: Wray
   family: Buntine
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
