--- a/_posts/2012-11-17-liu12b.md
+++ b/_posts/2012-11-17-liu12b.md
@@ -10,14 +10,13 @@ abstract: The goal of traditional multi-instance learning (MIL) is to predict th
   commonly used nearest neighbor graphs, but is suitable for KID. Experiments validate
   the effectiveness of VF for KID. Additionally, VF also outperforms state-of-the-art
   MIL approaches on the performance of bag label prediction.
-pdf: http://proceedings.pmlr.press/liu12b/liu12b.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/liu12b/liu12b.pdf
 layout: inproceedings
 id: liu12b
 month: 0
 firstpage: 253
 lastpage: 268
 page: 253-268
-origpdf: http://jmlr.org/proceedings/papers/v25/liu12b/liu12b.pdf
 sections: 
 author:
 - given: G.
@@ -26,6 +25,7 @@ author:
   family: Wu
 - given: Z.-H.
   family: Zhou
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
