--- a/_posts/2012-11-17-madani12.md
+++ b/_posts/2012-11-17-madani12.md
@@ -15,14 +15,13 @@ abstract: Often we require classification at a very high precision level, such a
   by the analysis. We compare a number of early and late fusion methods, and observe
   that classifier combination via late fusion can more than double the recall at high
   precision.
-pdf: http://proceedings.pmlr.press/madani12/madani12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/madani12/madani12.pdf
 layout: inproceedings
 id: madani12
 month: 0
 firstpage: 269
 lastpage: 284
 page: 269-284
-origpdf: http://jmlr.org/proceedings/papers/v25/madani12/madani12.pdf
 sections: 
 author:
 - given: O.
@@ -31,6 +30,7 @@ author:
   family: Georg
 - given: D.A.
   family: Ross
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
