--- a/_posts/2012-11-17-mao12.md
+++ b/_posts/2012-11-17-mao12.md
@@ -10,20 +10,20 @@ abstract: We introduce a new statistical relational learning (SRL) approach in w
   based on finite automata lies in the fact that one can analyse the resulting models
   using formal model-checking techniques, which adds a dimension of model analysis
   not usually available for traditional SRL modeling frameworks.
-pdf: http://proceedings.pmlr.press/mao12/mao12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/mao12/mao12.pdf
 layout: inproceedings
 id: mao12
 month: 0
 firstpage: 285
 lastpage: 300
 page: 285-300
-origpdf: http://jmlr.org/proceedings/papers/v25/mao12/mao12.pdf
 sections: 
 author:
 - given: H.
   family: Mao
 - given: M.
   family: Jaeger
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
