--- a/_posts/2012-11-17-tran12c.md
+++ b/_posts/2012-11-17-tran12c.md
@@ -13,14 +13,13 @@ abstract: In machine learning, we often encounter datasets that can be described
   space significantly, and therefore the learning time is reduced. Our implementation
   is based on the DL-Learner framework and we inherit the Parallel Class Expression
   Learning (ParCEL) algorithm design for parallelisation.
-pdf: http://proceedings.pmlr.press/tran12c/tran12c.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/tran12c/tran12c.pdf
 layout: inproceedings
 id: tran12c
 month: 0
 firstpage: 443
 lastpage: 458
 page: 443-458
-origpdf: http://jmlr.org/proceedings/papers/v25/tran12c/tran12c.pdf
 sections: 
 author:
 - given: A.C.
@@ -31,6 +30,7 @@ author:
   family: Guesgen
 - given: S.
   family: Marsland
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
