--- a/_posts/2012-11-17-wang12b.md
+++ b/_posts/2012-11-17-wang12b.md
@@ -9,20 +9,20 @@ abstract: Concerned with multi-objective reinforcement learning (MORL), this pap
   study of MO-MCTS is made on the NP-hard problem of grid scheduling, showing that
   the performance of MO-MCTS matches the non RL-based state of the art albeit with
   a higher computational cost.
-pdf: http://proceedings.pmlr.press/wang12b/wang12b.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/wang12b/wang12b.pdf
 layout: inproceedings
 id: wang12b
 month: 0
 firstpage: 507
 lastpage: 522
 page: 507-522
-origpdf: http://jmlr.org/proceedings/papers/v25/wang12b/wang12b.pdf
 sections: 
 author:
 - given: W.
   family: Wang
 - given: M.
   family: Sebag
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
