--- a/_posts/2012-11-17-yang12.md
+++ b/_posts/2012-11-17-yang12.md
@@ -12,20 +12,20 @@ abstract: For classification problems with millions of training examples or dime
   analyze the polynomial approximation numerically to demonstrate its validity. Empirically,
   our algorithm is faster than PmSVM and feature mapping in many datasets with higher
   classification accuracies and can save up to 60% memory usage as well.
-pdf: http://proceedings.pmlr.press/yang12/yang12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/yang12/yang12.pdf
 layout: inproceedings
 id: yang12
 month: 0
 firstpage: 523
 lastpage: 538
 page: 523-538
-origpdf: http://jmlr.org/proceedings/papers/v25/yang12/yang12.pdf
 sections: 
 author:
 - given: H.
   family: Yang
 - given: J.
   family: Wu
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
