--- a/_posts/2012-11-17-yasutake12.md
+++ b/_posts/2012-11-17-yasutake12.md
@@ -8,14 +8,13 @@ abstract: We consider an online learning framework where the task is to predict 
   a lower bound of the cumulative loss and hardness results. Then, we propose an algorithm
   for this problem and prove its relative loss bound which shows our algorithm is
   close to optimal.
-pdf: http://proceedings.pmlr.press/yasutake12/yasutake12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/yasutake12/yasutake12.pdf
 layout: inproceedings
 id: yasutake12
 month: 0
 firstpage: 539
 lastpage: 553
 page: 539-553
-origpdf: http://jmlr.org/proceedings/papers/v25/yasutake12/yasutake12.pdf
 sections: 
 author:
 - given: S.
@@ -26,6 +25,7 @@ author:
   family: Takimoto
 - given: M.
   family: Takeda
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
