--- a/_posts/2012-11-17-zhou12.md
+++ b/_posts/2012-11-17-zhou12.md
@@ -12,14 +12,13 @@ abstract: Learning with Positive and Unlabeled instances (PU learning) arises wi
   proposed learning method in a multi-view manner by utilizing multiple heterogeneous
   sources. Extensive experimental studies demonstrate the effectiveness of our proposed
   methods, especially when positive labeled data are limited.
-pdf: http://proceedings.pmlr.press/zhou12/zhou12.pdf
+pdf: http://jmlr.org/proceedings/papers/v25/zhou12/zhou12.pdf
 layout: inproceedings
 id: zhou12
 month: 0
 firstpage: 555
 lastpage: 570
 page: 555-570
-origpdf: http://jmlr.org/proceedings/papers/v25/zhou12/zhou12.pdf
 sections: 
 author:
 - given: J.T.
@@ -30,6 +29,7 @@ author:
   family: Mao
 - given: I.W.
   family: Tsang
+reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
