--- a/_posts/2012-11-17-fan12.md
+++ b/_posts/2012-11-17-fan12.md
@@ -15,7 +15,7 @@ abstract: Online algorithms allow data instances to be processed in a sequential
   The proposed online infinite mixture model is validated through both synthetic data
   sets and two challenging real-world applications namely text document clustering
   and online human face detection.
-pdf: http://jmlr.org/proceedings/papers/v25/fan12/fan12.pdf
+pdf: http://proceedings.mlr.press/v25/fan12/fan12.pdf
 layout: inproceedings
 id: fan12
 month: 0
@@ -28,7 +28,6 @@ author:
   family: Fan
 - given: N.
   family: Bouguila
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
