--- a/_posts/2012-11-17-feraud12.md
+++ b/_posts/2012-11-17-feraud12.md
@@ -9,7 +9,7 @@ abstract: Stochastic multi-armed bandit algorithms are used to solve the explora
   We show that the bound of expectation to play a suboptimal arm is lower than the
   one of UCB1 policy. We illustrate this result on both synthetic problems and realistic
   problems (ad-serving and emailing campaigns optimization).
-pdf: http://jmlr.org/proceedings/papers/v25/feraud12/feraud12.pdf
+pdf: http://proceedings.mlr.press/v25/feraud12/feraud12.pdf
 layout: inproceedings
 id: feraud12
 month: 0
@@ -22,7 +22,6 @@ author:
   family: Féraud
 - given: T.
   family: Urvoy
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
