--- a/_posts/2012-11-17-haimovitch12.md
+++ b/_posts/2012-11-17-haimovitch12.md
@@ -6,7 +6,7 @@ abstract: We describe a bootstrapping algorithm to learn from partially labeled 
   cover semi-supervised learning, domain adaptation and weakly supervised learning.
   In some cases our methods were able to reduce test error by more than half using
   such large amount of data.
-pdf: http://jmlr.org/proceedings/papers/v25/haimovitch12/haimovitch12.pdf
+pdf: http://proceedings.mlr.press/v25/haimovitch12/haimovitch12.pdf
 layout: inproceedings
 id: haimovitch12
 month: 0
@@ -21,7 +21,6 @@ author:
   family: Crammer
 - given: S.
   family: Mannor
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
