--- a/_posts/2012-11-17-liu12a.md
+++ b/_posts/2012-11-17-liu12a.md
@@ -11,7 +11,7 @@ abstract: Based on the convex-concave relaxation procedure (CCRP), the (extended
   introduce two other initializations for comparison. Meanwhile, the graduated assignment
   algorithm is also introduced in the experimental comparisons, which witness the
   validity of the proposed algorithm.
-pdf: http://jmlr.org/proceedings/papers/v25/liu12a/liu12a.pdf
+pdf: http://proceedings.mlr.press/v25/liu12a/liu12a.pdf
 layout: inproceedings
 id: liu12a
 month: 0
@@ -24,7 +24,6 @@ author:
   family: Liu
 - given: H.
   family: Qiao
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
