--- a/_posts/2012-11-17-navaroli12.md
+++ b/_posts/2012-11-17-navaroli12.md
@@ -10,7 +10,7 @@ abstract: As digital communication devices play an increasingly prominent role i
   of group memberships, temporal changepoints, and rate parameters is carried out
   via Markov Chain Monte Carlo (MCMC) methods. We illustrate the utility of the model
   by applying it to both simulated and real-world email data sets.
-pdf: http://jmlr.org/proceedings/papers/v25/navaroli12/navaroli12.pdf
+pdf: http://proceedings.mlr.press/v25/navaroli12/navaroli12.pdf
 layout: inproceedings
 id: navaroli12
 month: 0
@@ -25,7 +25,6 @@ author:
   family: DuBois
 - given: P.
   family: Smyth
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
