--- a/_posts/2012-11-17-sasaki12.md
+++ b/_posts/2012-11-17-sasaki12.md
@@ -13,7 +13,7 @@ abstract: 'Independent component analysis (ICA) is a method to estimate componen
   than previously proposed extensions of ICA. We learn topographic representations
   for two kinds of real data sets: for outputs of simulated complex cells in the primary
   visual cortex and for text data.'
-pdf: http://jmlr.org/proceedings/papers/v25/sasaki12/sasaki12.pdf
+pdf: http://proceedings.mlr.press/v25/sasaki12/sasaki12.pdf
 layout: inproceedings
 id: sasaki12
 month: 0
@@ -30,7 +30,6 @@ author:
   family: Shouno
 - given: A.
   family: Hyvärinen
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
