--- a/_posts/2012-11-17-than12.md
+++ b/_posts/2012-11-17-than12.md
@@ -11,7 +11,7 @@ abstract: We consider supervised dimension reduction (SDR) for problems with dis
   can yield scalable and qualitative methods for SDR. One of those adaptations can
   perform better than the state-of-the-art method for SDR while enjoying significantly
   faster speed.
-pdf: http://jmlr.org/proceedings/papers/v25/than12/than12.pdf
+pdf: http://proceedings.mlr.press/v25/than12/than12.pdf
 layout: inproceedings
 id: than12
 month: 0
@@ -28,7 +28,6 @@ author:
   family: Nguyen
 - given: N.K.
   family: Pham
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
