--- a/_posts/2012-11-17-adhikari12.md
+++ b/_posts/2012-11-17-adhikari12.md
@@ -13,7 +13,7 @@ abstract: Observing natural phenomena at several levels of detail results in mul
   of mixture models across different resolutions. We experiment our proposed algorithm
   on the two real-world chromosomal aberration datasets represented in two different
   resolutions. Results show an improvement on the compared multiresolution settings.
-pdf: http://jmlr.org/proceedings/papers/v25/adhikari12/adhikari12.pdf
+pdf: http://proceedings.mlr.press/v25/adhikari12/adhikari12.pdf
 layout: inproceedings
 id: adhikari12
 month: 0
@@ -26,7 +26,6 @@ author:
   family: Adhikari
 - given: J.
   family: Hollmén
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
