--- a/_posts/2012-11-17-asbeh12.md
+++ b/_posts/2012-11-17-asbeh12.md
@@ -14,7 +14,7 @@ abstract: Identification of latent variables that govern a problem and the relat
   about the distribution. Using simulated and real-world datasets, we show that LPCC
   improves accuracy with the sample size, can learn large LVMs, and is accurate in
   learning compared to state-of-the-art algorithms.
-pdf: http://jmlr.org/proceedings/papers/v25/asbeh12/asbeh12.pdf
+pdf: http://proceedings.mlr.press/v25/asbeh12/asbeh12.pdf
 layout: inproceedings
 id: asbeh12
 month: 0
@@ -27,7 +27,6 @@ author:
   family: Asbeh
 - given: B.
   family: Lerner
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
