--- a/_posts/2012-11-17-azmandian12.md
+++ b/_posts/2012-11-17-azmandian12.md
@@ -10,7 +10,7 @@ abstract: Selecting features is an important step of any machine learning task, 
   this feature selection algorithm compared to popular and state-of-the-art methods.
   We also show that the proposed algorithm is able to overcome the small sample space
   problem and perform well on highly imbalanced datasets.
-pdf: http://jmlr.org/proceedings/papers/v25/azmandian12/azmandian12.pdf
+pdf: http://proceedings.mlr.press/v25/azmandian12/azmandian12.pdf
 layout: inproceedings
 id: azmandian12
 month: 0
@@ -27,7 +27,6 @@ author:
   family: Aslam
 - given: D.R.
   family: Kaeli
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
