--- a/_posts/2012-11-17-gu12.md
+++ b/_posts/2012-11-17-gu12.md
@@ -9,7 +9,7 @@ abstract: In this paper, we investigate the problem of exploiting global informa
   for large data sets. Kernels can be easily incorporated into our method to address
   non-linear classification problems. Our empirical results show that the proposed
   MMRM approach achieves promising results on large data sets.
-pdf: http://jmlr.org/proceedings/papers/v25/gu12/gu12.pdf
+pdf: http://proceedings.mlr.press/v25/gu12/gu12.pdf
 layout: inproceedings
 id: gu12
 month: 0
@@ -22,7 +22,6 @@ author:
   family: Gu
 - given: Y.
   family: Guo
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
