--- a/_posts/2012-11-17-klami12.md
+++ b/_posts/2012-11-17-klami12.md
@@ -10,7 +10,7 @@ abstract: Matching of samples refers to the problem of inferring unknown co-occu
   correlation analysis model with a permutation parameter for re-ordering the samples
   in one of the sets. We approximate the posterior over the permutations, and demonstrate
   that the resulting matching algorithm clearly outperforms all of the earlier solutions.
-pdf: http://jmlr.org/proceedings/papers/v25/klami12/klami12.pdf
+pdf: http://proceedings.mlr.press/v25/klami12/klami12.pdf
 layout: inproceedings
 id: klami12
 month: 0
@@ -21,7 +21,6 @@ sections:
 author:
 - given: A.
   family: Klami
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
