--- a/_posts/2012-11-17-li12.md
+++ b/_posts/2012-11-17-li12.md
@@ -11,7 +11,7 @@ abstract: The abundance of real-world data and limited labeling budget calls for
   the hinted sampling framework with an extended support vector machine. Experimental
   results validate that the novel active learning algorithm can result in a better
   and more stable performance than that achieved by state-of-the-art algorithms.
-pdf: http://jmlr.org/proceedings/papers/v25/li12/li12.pdf
+pdf: http://proceedings.mlr.press/v25/li12/li12.pdf
 layout: inproceedings
 id: li12
 month: 0
@@ -26,7 +26,6 @@ author:
   family: Ferng
 - given: H.-T.
   family: Lin
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
