--- a/_posts/2012-11-17-nakajima12.md
+++ b/_posts/2012-11-17-nakajima12.md
@@ -10,7 +10,7 @@ abstract: Principal component analysis (PCA) can be regarded as approximating a 
   approximation to SAMF, which gives the global optimal solution for a large subset
   of parameters in each step. We demonstrate the usefulness of our method on artificial
   data and the foreground/background video separation.
-pdf: http://jmlr.org/proceedings/papers/v25/nakajima12/nakajima12.pdf
+pdf: http://proceedings.mlr.press/v25/nakajima12/nakajima12.pdf
 layout: inproceedings
 id: nakajima12
 month: 0
@@ -25,7 +25,6 @@ author:
   family: Sugiyama
 - given: S.D.
   family: Babacan
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
