--- a/_posts/2012-11-17-tran12a.md
+++ b/_posts/2012-11-17-tran12a.md
@@ -9,7 +9,7 @@ abstract: Ordinal data is omnipresent in almost all multiuser-generated feedback
   filtering techniques on large-scale public datasets. The model thus has the potential
   to extend application of RBMs to diverse domains such as recommendation systems,
   product reviews and expert assessments.
-pdf: http://jmlr.org/proceedings/papers/v25/tran12a/tran12a.pdf
+pdf: http://proceedings.mlr.press/v25/tran12a/tran12a.pdf
 layout: inproceedings
 id: tran12a
 month: 0
@@ -24,7 +24,6 @@ author:
   family: Phung
 - given: S.
   family: Venkatesh
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
