--- a/_posts/2012-11-17-tran12c.md
+++ b/_posts/2012-11-17-tran12c.md
@@ -13,7 +13,7 @@ abstract: In machine learning, we often encounter datasets that can be described
   space significantly, and therefore the learning time is reduced. Our implementation
   is based on the DL-Learner framework and we inherit the Parallel Class Expression
   Learning (ParCEL) algorithm design for parallelisation.
-pdf: http://jmlr.org/proceedings/papers/v25/tran12c/tran12c.pdf
+pdf: http://proceedings.mlr.press/v25/tran12c/tran12c.pdf
 layout: inproceedings
 id: tran12c
 month: 0
@@ -30,7 +30,6 @@ author:
   family: Guesgen
 - given: S.
   family: Marsland
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
