--- a/_posts/2012-11-17-wang12a.md
+++ b/_posts/2012-11-17-wang12a.md
@@ -11,7 +11,7 @@ abstract: Nonlinear encoding of SIFT features has recently shown good promise in
   information into consideration in encoding. Our experiments on synthetic data and
   benchmark data demonstrate that the proposed scheme can learn a better dictionary
   and achieve higher classification accuracy.
-pdf: http://jmlr.org/proceedings/papers/v25/wang12a/wang12a.pdf
+pdf: http://proceedings.mlr.press/v25/wang12a/wang12a.pdf
 layout: inproceedings
 id: wang12a
 month: 0
@@ -28,7 +28,6 @@ author:
   family: Chen
 - given: Y.
   family: Wu
-reponame: v25
 date: 2012-11-17
 address: Singapore Management University, Singapore
 publisher: PMLR
