Update with corrected citeproc.yaml

--- a/_posts/2012-11-17-adhikari12.md
+++ b/_posts/2012-11-17-adhikari12.md
@@ -15,6 +15,7 @@ abstract: Observing natural phenomena at several levels of detail results in mul
   resolutions. Results show an improvement on the compared multiresolution settings.
 pdf: http://proceedings.mlr.press/v25/adhikari12/adhikari12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: adhikari12
 month: 0
 firstpage: 17
