--- a/_posts/2012-11-17-asbeh12.md
+++ b/_posts/2012-11-17-asbeh12.md
@@ -16,6 +16,7 @@ abstract: Identification of latent variables that govern a problem and the relat
   learning compared to state-of-the-art algorithms.
 pdf: http://proceedings.mlr.press/v25/asbeh12/asbeh12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: asbeh12
 month: 0
 firstpage: 33
