--- a/_posts/2012-11-17-azmandian12.md
+++ b/_posts/2012-11-17-azmandian12.md
@@ -12,6 +12,7 @@ abstract: Selecting features is an important step of any machine learning task, 
   problem and perform well on highly imbalanced datasets.
 pdf: http://proceedings.mlr.press/v25/azmandian12/azmandian12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: azmandian12
 month: 0
 firstpage: 49
