--- a/_posts/2012-11-17-chatzis12.md
+++ b/_posts/2012-11-17-chatzis12.md
@@ -17,6 +17,7 @@ abstract: The dramatic rates new digital content becomes available has brought c
   four common baselines, including two very competitive state-of-the-art approaches.
 pdf: http://proceedings.mlr.press/v25/chatzis12/chatzis12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: chatzis12
 month: 0
 firstpage: 65
