--- a/_posts/2012-11-17-chiang12.md
+++ b/_posts/2012-11-17-chiang12.md
@@ -14,6 +14,7 @@ abstract: Multi-label classification has attracted a great deal of attention in 
   neighbors is useful to solve the multi-label problem.
 pdf: http://proceedings.mlr.press/v25/chiang12/chiang12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: chiang12
 month: 0
 firstpage: 81
