--- a/_posts/2012-11-17-demyanov12.md
+++ b/_posts/2012-11-17-demyanov12.md
@@ -11,6 +11,7 @@ abstract: We study the problem of selecting the best parameter values to use for
   they are able to achieve good accuracy, whilst also having low running time.
 pdf: http://proceedings.mlr.press/v25/demyanov12/demyanov12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: demyanov12
 month: 0
 firstpage: 97
