--- a/_posts/2012-11-17-fan12.md
+++ b/_posts/2012-11-17-fan12.md
@@ -17,6 +17,7 @@ abstract: Online algorithms allow data instances to be processed in a sequential
   and online human face detection.
 pdf: http://proceedings.mlr.press/v25/fan12/fan12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: fan12
 month: 0
 firstpage: 113
