--- a/_posts/2012-11-17-feraud12.md
+++ b/_posts/2012-11-17-feraud12.md
@@ -11,6 +11,7 @@ abstract: Stochastic multi-armed bandit algorithms are used to solve the explora
   problems (ad-serving and emailing campaigns optimization).
 pdf: http://proceedings.mlr.press/v25/feraud12/feraud12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: feraud12
 month: 0
 firstpage: 129
