--- a/_posts/2012-11-17-haimovitch12.md
+++ b/_posts/2012-11-17-haimovitch12.md
@@ -8,6 +8,7 @@ abstract: We describe a bootstrapping algorithm to learn from partially labeled 
   such large amount of data.
 pdf: http://proceedings.mlr.press/v25/haimovitch12/haimovitch12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: haimovitch12
 month: 0
 firstpage: 175
