--- a/_posts/2012-11-17-kawajiri12.md
+++ b/_posts/2012-11-17-kawajiri12.md
@@ -21,6 +21,7 @@ abstract: 'Recently wireless LAN (WLAN) localization systems are gaining popular
   data.'
 pdf: http://proceedings.mlr.press/v25/kawajiri12/kawajiri12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: kawajiri12
 month: 0
 firstpage: 191
