--- a/_posts/2012-11-17-klami12.md
+++ b/_posts/2012-11-17-klami12.md
@@ -12,6 +12,7 @@ abstract: Matching of samples refers to the problem of inferring unknown co-occu
   that the resulting matching algorithm clearly outperforms all of the earlier solutions.
 pdf: http://proceedings.mlr.press/v25/klami12/klami12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: klami12
 month: 0
 firstpage: 205
