--- a/_posts/2012-11-17-li12.md
+++ b/_posts/2012-11-17-li12.md
@@ -13,6 +13,7 @@ abstract: The abundance of real-world data and limited labeling budget calls for
   and more stable performance than that achieved by state-of-the-art algorithms.
 pdf: http://proceedings.mlr.press/v25/li12/li12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: li12
 month: 0
 firstpage: 221
