--- a/_posts/2012-11-17-liu12a.md
+++ b/_posts/2012-11-17-liu12a.md
@@ -13,6 +13,7 @@ abstract: Based on the convex-concave relaxation procedure (CCRP), the (extended
   validity of the proposed algorithm.
 pdf: http://proceedings.mlr.press/v25/liu12a/liu12a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: liu12a
 month: 0
 firstpage: 237
