--- a/_posts/2012-11-17-liu12b.md
+++ b/_posts/2012-11-17-liu12b.md
@@ -12,6 +12,7 @@ abstract: The goal of traditional multi-instance learning (MIL) is to predict th
   MIL approaches on the performance of bag label prediction.
 pdf: http://proceedings.mlr.press/v25/liu12b/liu12b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: liu12b
 month: 0
 firstpage: 253
