--- a/_posts/2012-11-17-mao12.md
+++ b/_posts/2012-11-17-mao12.md
@@ -12,6 +12,7 @@ abstract: We introduce a new statistical relational learning (SRL) approach in w
   not usually available for traditional SRL modeling frameworks.
 pdf: http://proceedings.mlr.press/v25/mao12/mao12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: mao12
 month: 0
 firstpage: 285
