--- a/_posts/2012-11-17-nakajima12.md
+++ b/_posts/2012-11-17-nakajima12.md
@@ -12,6 +12,7 @@ abstract: Principal component analysis (PCA) can be regarded as approximating a 
   data and the foreground/background video separation.
 pdf: http://proceedings.mlr.press/v25/nakajima12/nakajima12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: nakajima12
 month: 0
 firstpage: 301
