--- a/_posts/2012-11-17-navaroli12.md
+++ b/_posts/2012-11-17-navaroli12.md
@@ -12,6 +12,7 @@ abstract: As digital communication devices play an increasingly prominent role i
   by applying it to both simulated and real-world email data sets.
 pdf: http://proceedings.mlr.press/v25/navaroli12/navaroli12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: navaroli12
 month: 0
 firstpage: 317
