--- a/_posts/2012-11-17-sasaki12.md
+++ b/_posts/2012-11-17-sasaki12.md
@@ -15,6 +15,7 @@ abstract: 'Independent component analysis (ICA) is a method to estimate componen
   visual cortex and for text data.'
 pdf: http://proceedings.mlr.press/v25/sasaki12/sasaki12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: sasaki12
 month: 0
 firstpage: 365
