--- a/_posts/2012-11-17-shariat12.md
+++ b/_posts/2012-11-17-shariat12.md
@@ -13,6 +13,7 @@ abstract: Traditional pairwise sequence alignment is based on matching individua
   on a variety of problems, from EEG to motion sequence classification.
 pdf: http://proceedings.mlr.press/v25/shariat12/shariat12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: shariat12
 month: 0
 firstpage: 379
