--- a/_posts/2012-11-17-than12.md
+++ b/_posts/2012-11-17-than12.md
@@ -13,6 +13,7 @@ abstract: We consider supervised dimension reduction (SDR) for problems with dis
   faster speed.
 pdf: http://proceedings.mlr.press/v25/than12/than12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: than12
 month: 0
 firstpage: 395
