--- a/_posts/2012-11-17-tran12a.md
+++ b/_posts/2012-11-17-tran12a.md
@@ -11,6 +11,7 @@ abstract: Ordinal data is omnipresent in almost all multiuser-generated feedback
   product reviews and expert assessments.
 pdf: http://proceedings.mlr.press/v25/tran12a/tran12a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: tran12a
 month: 0
 firstpage: 411
