--- a/_posts/2012-11-17-tran12b.md
+++ b/_posts/2012-11-17-tran12b.md
@@ -14,6 +14,7 @@ abstract: 'Ranking over sets arise when users choose between groups of items. Fo
   methods.'
 pdf: http://proceedings.mlr.press/v25/tran12b/tran12b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: tran12b
 month: 0
 firstpage: 427
