--- a/_posts/2012-11-17-tran12c.md
+++ b/_posts/2012-11-17-tran12c.md
@@ -15,6 +15,7 @@ abstract: In machine learning, we often encounter datasets that can be described
   Learning (ParCEL) algorithm design for parallelisation.
 pdf: http://proceedings.mlr.press/v25/tran12c/tran12c.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: tran12c
 month: 0
 firstpage: 443
