--- a/_posts/2012-11-17-vovk12.md
+++ b/_posts/2012-11-17-vovk12.md
@@ -9,6 +9,7 @@ abstract: Conformal predictors are set predictors that are automatically valid i
   achieve them using inductive conformal predictors and their modifications.
 pdf: http://proceedings.mlr.press/v25/vovk12/vovk12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: vovk12
 month: 0
 firstpage: 475
