--- a/_posts/2012-11-17-wang12a.md
+++ b/_posts/2012-11-17-wang12a.md
@@ -13,6 +13,7 @@ abstract: Nonlinear encoding of SIFT features has recently shown good promise in
   and achieve higher classification accuracy.
 pdf: http://proceedings.mlr.press/v25/wang12a/wang12a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: wang12a
 month: 0
 firstpage: 491
