--- a/_posts/2012-11-17-wang12b.md
+++ b/_posts/2012-11-17-wang12b.md
@@ -11,6 +11,7 @@ abstract: Concerned with multi-objective reinforcement learning (MORL), this pap
   a higher computational cost.
 pdf: http://proceedings.mlr.press/v25/wang12b/wang12b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: wang12b
 month: 0
 firstpage: 507
