--- a/_posts/2012-11-17-yang12.md
+++ b/_posts/2012-11-17-yang12.md
@@ -14,6 +14,7 @@ abstract: For classification problems with millions of training examples or dime
   classification accuracies and can save up to 60% memory usage as well.
 pdf: http://proceedings.mlr.press/v25/yang12/yang12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: yang12
 month: 0
 firstpage: 523
