--- a/_posts/2012-11-17-yasutake12.md
+++ b/_posts/2012-11-17-yasutake12.md
@@ -10,6 +10,7 @@ abstract: We consider an online learning framework where the task is to predict 
   close to optimal.
 pdf: http://proceedings.mlr.press/v25/yasutake12/yasutake12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: yasutake12
 month: 0
 firstpage: 539
