--- a/_posts/2012-11-17-zhou12.md
+++ b/_posts/2012-11-17-zhou12.md
@@ -14,6 +14,7 @@ abstract: Learning with Positive and Unlabeled instances (PU learning) arises wi
   methods, especially when positive labeled data are limited.
 pdf: http://proceedings.mlr.press/v25/zhou12/zhou12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: zhou12
 month: 0
 firstpage: 555
