--- a/_posts/2012-11-17-gu12.md
+++ b/_posts/2012-11-17-gu12.md
@@ -11,6 +11,7 @@ abstract: In this paper, we investigate the problem of exploiting global informa
   MMRM approach achieves promising results on large data sets.
 pdf: http://proceedings.mlr.press/v25/gu12/gu12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: gu12
 month: 0
 firstpage: 145
