--- a/_posts/2012-11-17-hoi12.md
+++ b/_posts/2012-11-17-hoi12.md
@@ -5,6 +5,7 @@ abstract: Preface to the Proceedings of the 4th Asian Conference on Machine Lear
 pdf: http://proceedings.mlr.press/v25/hoi12/hoi12.pdf
 section: preface
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: hoi12
 month: 0
 firstpage: 0
