--- a/_posts/2012-11-17-madani12.md
+++ b/_posts/2012-11-17-madani12.md
@@ -17,6 +17,7 @@ abstract: Often we require classification at a very high precision level, such a
   precision.
 pdf: http://proceedings.mlr.press/v25/madani12/madani12.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: madani12
 month: 0
 firstpage: 269
