Update styles, headers, _config.yml

--- a/_posts/2012-11-17-adhikari12.md
+++ b/_posts/2012-11-17-adhikari12.md
@@ -18,6 +18,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: adhikari12
 month: 0
+tex_title: Multiresolution Mixture Modeling using Merging of Mixture Components
 firstpage: 17
 lastpage: 32
 page: 17-32
