--- a/_posts/2012-11-17-asbeh12.md
+++ b/_posts/2012-11-17-asbeh12.md
@@ -19,6 +19,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: asbeh12
 month: 0
+tex_title: Learning Latent Variable Models by Pairwise Cluster Comparison
 firstpage: 33
 lastpage: 48
 page: 33-48
