--- a/_posts/2012-11-17-chatzis12.md
+++ b/_posts/2012-11-17-chatzis12.md
@@ -20,6 +20,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: chatzis12
 month: 0
+tex_title: A Coupled Indian Buffet Process Model for Collaborative Filtering
 firstpage: 65
 lastpage: 79
 page: 65-79
