--- a/_posts/2012-11-17-chiang12.md
+++ b/_posts/2012-11-17-chiang12.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: chiang12
 month: 0
+tex_title: A Ranking-based KNN Approach for Multi-Label Classification
 firstpage: 81
 lastpage: 96
 page: 81-96
