--- a/_posts/2012-11-17-fan12.md
+++ b/_posts/2012-11-17-fan12.md
@@ -20,6 +20,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: fan12
 month: 0
+tex_title: Online Learning of a Dirichlet Process Mixture of Generalized Dirichlet
+  Distributions for Simultaneous Clustering and Localized Feature Selection
 firstpage: 113
 lastpage: 128
 page: 113-128
