--- a/_posts/2012-11-17-feraud12.md
+++ b/_posts/2012-11-17-feraud12.md
@@ -14,6 +14,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: feraud12
 month: 0
+tex_title: A stochastic bandit algorithm for scratch games
 firstpage: 129
 lastpage: 143
 page: 129-143
