--- a/_posts/2012-11-17-haimovitch12.md
+++ b/_posts/2012-11-17-haimovitch12.md
@@ -11,6 +11,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: haimovitch12
 month: 0
+tex_title: 'More Is Better: Large Scale Partially-supervised Sentiment Classification'
 firstpage: 175
 lastpage: 190
 page: 175-190
