--- a/_posts/2012-11-17-kawajiri12.md
+++ b/_posts/2012-11-17-kawajiri12.md
@@ -24,6 +24,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: kawajiri12
 month: 0
+tex_title: Frustratingly Simplified Deployment in WLAN Localization by Learning from
+  Route Annotation
 firstpage: 191
 lastpage: 204
 page: 191-204
