--- a/_posts/2012-11-17-klami12.md
+++ b/_posts/2012-11-17-klami12.md
@@ -15,6 +15,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: klami12
 month: 0
+tex_title: Variational Bayesian Matching
 firstpage: 205
 lastpage: 220
 page: 205-220
