--- a/_posts/2012-11-17-li12.md
+++ b/_posts/2012-11-17-li12.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: li12
 month: 0
+tex_title: Active Learning with Hinted Support Vector Machine
 firstpage: 221
 lastpage: 235
 page: 221-235
