--- a/_posts/2012-11-17-nakajima12.md
+++ b/_posts/2012-11-17-nakajima12.md
@@ -15,6 +15,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: nakajima12
 month: 0
+tex_title: Sparse Additive Matrix Factorization for Robust PCA and Its Generalization
 firstpage: 301
 lastpage: 316
 page: 301-316
