--- a/_posts/2012-11-17-neven12.md
+++ b/_posts/2012-11-17-neven12.md
@@ -18,6 +18,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: neven12
 month: 0
+tex_title: 'QBoost: Large Scale Classifier Training withAdiabatic Quantum Optimization'
 firstpage: 333
 lastpage: 348
 page: 333-348
