--- a/_posts/2012-11-17-shariat12.md
+++ b/_posts/2012-11-17-shariat12.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: shariat12
 month: 0
+tex_title: Improved sequence classification using adaptive segmental sequence alignment
 firstpage: 379
 lastpage: 394
 page: 379-394
