--- a/_posts/2012-11-17-than12.md
+++ b/_posts/2012-11-17-than12.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: than12
 month: 0
+tex_title: Supervised dimension reduction with topic models
 firstpage: 395
 lastpage: 410
 page: 395-410
