--- a/_posts/2012-11-17-tran12b.md
+++ b/_posts/2012-11-17-tran12b.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: tran12b
 month: 0
+tex_title: Learning From Ordered Sets and Applications in Collaborative Ranking
 firstpage: 427
 lastpage: 442
 page: 427-442
