--- a/_posts/2012-11-17-vovk12.md
+++ b/_posts/2012-11-17-vovk12.md
@@ -12,6 +12,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: vovk12
 month: 0
+tex_title: Conditional validity of inductive conformal predictors
 firstpage: 475
 lastpage: 490
 page: 475-490
