--- a/_posts/2012-11-17-wang12a.md
+++ b/_posts/2012-11-17-wang12a.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: wang12a
 month: 0
+tex_title: Spatial Locality-Aware Sparse Coding and Dictionary Learning
 firstpage: 491
 lastpage: 505
 page: 491-505
