--- a/_posts/2012-11-17-zhou12.md
+++ b/_posts/2012-11-17-zhou12.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: zhou12
 month: 0
+tex_title: Multi-view Positive and Unlabeled Learning
 firstpage: 555
 lastpage: 570
 page: 555-570
