--- a/_posts/2012-11-17-azmandian12.md
+++ b/_posts/2012-11-17-azmandian12.md
@@ -15,6 +15,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: azmandian12
 month: 0
+tex_title: Local Kernel Density Ratio-Based Feature Selection for Outlier Detection
 firstpage: 49
 lastpage: 64
 page: 49-64
