--- a/_posts/2012-11-17-demyanov12.md
+++ b/_posts/2012-11-17-demyanov12.md
@@ -14,6 +14,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: demyanov12
 month: 0
+tex_title: AIC and BIC based approaches for SVM parameter value estimation with RBF
+  kernels
 firstpage: 97
 lastpage: 112
 page: 97-112
