--- a/_posts/2012-11-17-gu12.md
+++ b/_posts/2012-11-17-gu12.md
@@ -14,6 +14,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: gu12
 month: 0
+tex_title: Max-Margin Ratio Machine
 firstpage: 145
 lastpage: 157
 page: 145-157
