--- a/_posts/2012-11-17-hoi12.md
+++ b/_posts/2012-11-17-hoi12.md
@@ -8,6 +8,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: hoi12
 month: 0
+tex_title: Preface
 firstpage: i
 lastpage: xvii
 page: i-xvii
