--- a/_posts/2012-11-17-liu12a.md
+++ b/_posts/2012-11-17-liu12a.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: liu12a
 month: 0
+tex_title: A Convex-Concave Relaxation Procedure Based Subgraph Matching Algorithm
 firstpage: 237
 lastpage: 252
 page: 237-252
