--- a/_posts/2012-11-17-liu12b.md
+++ b/_posts/2012-11-17-liu12b.md
@@ -15,6 +15,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: liu12b
 month: 0
+tex_title: Key Instance Detection in Multi-Instance Learning
 firstpage: 253
 lastpage: 268
 page: 253-268
