--- a/_posts/2012-11-17-madani12.md
+++ b/_posts/2012-11-17-madani12.md
@@ -20,6 +20,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: madani12
 month: 0
+tex_title: On Using Nearly-Independent Feature Families for High Precision and Confidence
 firstpage: 269
 lastpage: 284
 page: 269-284
