--- a/_posts/2012-11-17-navaroli12.md
+++ b/_posts/2012-11-17-navaroli12.md
@@ -15,6 +15,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: navaroli12
 month: 0
+tex_title: Statistical Models for Exploring Individual Email Communication Behavior
 firstpage: 317
 lastpage: 332
 page: 317-332
