--- a/_posts/2012-11-17-sasaki12.md
+++ b/_posts/2012-11-17-sasaki12.md
@@ -18,6 +18,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: sasaki12
 month: 0
+tex_title: Topographic Analysis of Correlated Components
 firstpage: 365
 lastpage: 378
 page: 365-378
