--- a/_posts/2012-11-17-tran12a.md
+++ b/_posts/2012-11-17-tran12a.md
@@ -14,6 +14,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: tran12a
 month: 0
+tex_title: Cumulative Restricted Boltzmann Machines for Ordinal Matrix Data Analysis
 firstpage: 411
 lastpage: 426
 page: 411-426
