--- a/_posts/2012-11-17-tran12c.md
+++ b/_posts/2012-11-17-tran12c.md
@@ -18,6 +18,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: tran12c
 month: 0
+tex_title: Two-way Parallel Class Expression Learning
 firstpage: 443
 lastpage: 458
 page: 443-458
