--- a/_posts/2012-11-17-wang12b.md
+++ b/_posts/2012-11-17-wang12b.md
@@ -14,6 +14,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: wang12b
 month: 0
+tex_title: Multi-objective Monte-Carlo Tree Search
 firstpage: 507
 lastpage: 522
 page: 507-522
