--- a/_posts/2012-11-17-yang12.md
+++ b/_posts/2012-11-17-yang12.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: yang12
 month: 0
+tex_title: Practical Large Scale Classification with Additive Kernels
 firstpage: 523
 lastpage: 538
 page: 523-538
