--- a/_posts/2012-11-17-yasutake12.md
+++ b/_posts/2012-11-17-yasutake12.md
@@ -13,6 +13,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: yasutake12
 month: 0
+tex_title: Online Rank Aggregation
 firstpage: 539
 lastpage: 553
 page: 539-553
